# kimi-guidelines

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FORMALISM.md  GLOSSARY.md  INSTALL.md  LICENSE  Makefile  PIPELINE.md  README.md  SEVERITY.md  install.sh  pre-commit.example.yaml
.github/: CODEOWNERS
.github/actions/cargo-kimi/: action.yml
.github/actions/kimi-dotfiles/: action.yml
.github/workflows/: dogfood.yml  example-kimi-check.yml  kani.yml  lint.yml  release.yml
benchmarks/: .gitignore  README.md  scorecard.md
benchmarks/prompts/: 01_email_validator.md  02_rate_limiter.md  03_config_parser.md  04_json_serializer.md  05_job_queue.md  06_url_router.md  07_csv_parser.md  08_password_hasher.md  09_event_bus.md  10_lru_cache.md
benchmarks/scoring/: score_output.py
cargo-kimi/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
cargo-kimi/assets/strictness/: relaxed.toml  strict.toml
cargo-kimi/assets/templates/full/: AGENTS.md
cargo-kimi/assets/templates/minimal/: AGENTS.md
cargo-kimi/assets/templates/modular/: AGENTS.md
cargo-kimi/assets/templates/rust-only/: AGENTS.md
cargo-kimi/src/: cli.rs  contracts.rs  fix.rs  init.rs  main.rs  mcp.rs  skills.rs  testgen.rs  trend.rs  watch.rs  workspace.rs
cargo-kimi/tests/: integration_cli.rs
docs/superpowers/plans/: 2026-05-05-full-audit.md
docs/superpowers/specs/: 2026-05-05-full-audit-design.md  2026-05-05-full-audit-report.md
examples/existing-project/: AGENTS.md
examples/rust-demo/: .gitignore  Cargo.toml
examples/rust-demo/src/: algebra.rs  kani_proofs.rs  lib.rs  sorted_vec.rs  units.rs
examples/rust-http-client/: .gitignore  Cargo.toml
examples/rust-http-client/fuzz/: Cargo.toml
examples/rust-http-client/fuzz/fuzz_targets/: parse_issues.rs  parse_response.rs
examples/rust-http-client/src/: client.rs  error.rs  kani_proofs.rs  lib.rs  types.rs
examples/rust-http-client/tests/: integration_tests.rs
languages/python/: AGENTS.md
languages/rust/: AGENTS.md
languages/swift/: AGENTS.md
scripts/: check-contracts.py
skills/: SKILL.md
skills/examples/: rust-review.md
skills/kimi-check/: SKILL.md
skills/kimi-fix/: SKILL.md
skills/types/: refactoring.md  specification.md  verification.md
strictness/: standard.toml
templates/full/: AGENTS.md
templates/minimal/: AGENTS.md
templates/python/: AGENTS.md
templates/rust-only/: AGENTS.md
templates/rust/full/: AGENTS.md
templates/rust/minimal/: AGENTS.md
templates/rust/rust-only/: AGENTS.md
templates/swift-only/: AGENTS.md
