[package]
name = "cargo-kimi"
version = "1.6.5"
rust-version = "1.80"
include = ["src/**/*", "assets/**/*", "README.md", "CHANGELOG.md"]
edition = "2021"
description = "Cargo subcommand for kimi-dotfiles guidelines and verification"
license = "MIT"
repository = "https://github.com/ekhodzitsky/kimi-dotfiles"
readme = "README.md"
keywords = ["cargo", "cli", "rust", "contracts", "newtype"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-kimi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "7.0", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

