[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"
description = "Demo project for kimi-dotfiles guidelines"
license = "MIT"
repository = "https://github.com/ekhodzitsky/kimi-dotfiles"

[dev-dependencies]
proptest = "1.0"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
